@startuml
skinparam packageStyle Rect
skinparam shadowing false
hide empty members

namespace org.consensusj.jsonrpc {
    interface DynamicRpcMethodSupport
    abstract class AbstractRpcClient

    class RpcClient

    DynamicRpcMethodSupport <|.. AbstractRpcClient
    AbstractRpcClient <|-- RpcClient
}

namespace org.consensusj.jsonrpc.groovy {
    interface DynamicRpcMethodFallback << Groovy, trait >>
    class DynamicRpcClient << Groovy >>

    org.consensusj.jsonrpc.DynamicRpcMethodSupport <|.. DynamicRpcMethodFallback
    org.consensusj.jsonrpc.RpcClient <|-- DynamicRpcClient
    DynamicRpcMethodFallback <|.. DynamicRpcClient
}
@enduml
